[gd_scene load_steps=2 format=3 uid="uid://b00tb76sq14vq"]

[ext_resource type="Script" path="res://MainMenu/LobbyControl.gd" id="1_xaw8s"]

[node name="Node2D" type="Node2D"]

[node name="LobbyControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1154.0
offset_bottom = 654.0
script = ExtResource("1_xaw8s")

[node name="LobbyBoard" type="Panel" parent="LobbyControl"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 548.0

[node name="PlayerOneStatus" type="Label" parent="LobbyControl/LobbyBoard"]
layout_mode = 0
offset_left = 184.0
offset_top = 88.0
offset_right = 904.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 30
text = "Player One"

[node name="PlayerOneConnected" type="Label" parent="LobbyControl/LobbyBoard/PlayerOneStatus"]
layout_mode = 0
offset_left = 256.0
offset_top = 8.0
offset_right = 394.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 20
text = "Connected"

[node name="PlayerOneReady" type="Label" parent="LobbyControl/LobbyBoard/PlayerOneStatus"]
layout_mode = 0
offset_left = 576.0
offset_top = 8.0
offset_right = 694.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 20

[node name="PlayerTwoStatus" type="Label" parent="LobbyControl/LobbyBoard"]
layout_mode = 0
offset_left = 184.0
offset_top = 150.0
offset_right = 904.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 30
text = "Player Two"

[node name="PlayerTwoConnected" type="Label" parent="LobbyControl/LobbyBoard/PlayerTwoStatus"]
layout_mode = 0
offset_left = 256.0
offset_top = 8.0
offset_right = 394.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 20
text = "Connected"

[node name="PlayerOneReady" type="Label" parent="LobbyControl/LobbyBoard/PlayerTwoStatus"]
layout_mode = 0
offset_left = 576.0
offset_top = 8.0
offset_right = 694.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 20

[node name="ReadyButton" type="Button" parent="LobbyControl"]
layout_mode = 0
offset_left = 768.0
offset_top = 384.0
offset_right = 960.0
offset_bottom = 448.0
text = "Ready"

[node name="BackButton" type="Button" parent="LobbyControl"]
layout_mode = 0
offset_left = 192.0
offset_top = 384.0
offset_right = 384.0
offset_bottom = 448.0
text = "Back"
